--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_map: ^0.8.2
+  flutter_map: #^0.8.2
+    git:
+      url: git://github.com/bugDim88/flutter_map.git
+      ref: WMS_support
+      
   latlong: ^0.6.1
 
 dev_dependencies:
